deployment/development/service-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-svc
  namespace: dev-project
spec:
  type: ClusterIP
  selector:
    app: backend
  ports:
    - name: http
      port: 80
      targetPort: 8000
